ssh_guardian/common/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ssh-guardian-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ssh-guardian-server
  template:
    metadata:
      labels:
        app: ssh-guardian-server
    spec:
      containers:
        - name: ssh-guardian-server-container
          image: ssh-guardian-server-image
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "500m"
              memory: "500Mi"
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /actuator/health/liveness
              port: 9595
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 30
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /actuator/health/readiness
              port: 9595
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 30
