ssh_guardian/common/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ssh-guardian-service
spec:
  selector:
    app: ssh-guardian-server
  ports:
    - port: 9595
      targetPort: 9595
      protocol: TCP
