ssh_guardian/common/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ssh-guardian-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "https://6ebbf295.ssh-guardian-frontend-dev.pages.dev, http://localhost:5174"
spec:
  rules:
    - host: placeholder.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ssh-guardian-service
                port:
                  number: 9595
